--- a/cmd/server/config.json
+++ b/cmd/server/config.json
@@ -6,5 +6,6 @@
     "restore": true,
     "database_dsn": "",
     "key": "",
-    "crypto_key": ""
+    "crypto_key": "",
+    "trusted_subnet": ""
 }
