--- a/cmd/server/config.json
+++ b/cmd/server/config.json
@@ -1,5 +1,6 @@
 {
     "address": "localhost:8080",
+  "grpc_address": ":9090",
     "log_level": "info",
     "store_interval": 300,
     "file_storage_path": "/tmp/metrics-db.json",
